Got it compiled and so that's relieving
Problems with where it's being drawn but that's not too bad

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -456,7 +456,7 @@
             android:layout_weight="1"
             android:padding="4dp"
             app:text="Both"
-            app:textColor="@color/black"
+            app:textColor="@color/red"
             app:textColor_onSelection="@color/white" />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
