--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -73,12 +73,15 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="4dp"
         android:elevation="2dp"
+        android:background="@color/red"
         app:backgroundColor="@color/white"
         app:borderColor="@color/orange_700"
         app:borderSize="1dp"
+        app:radius="30dp"
         app:dividerColor="@color/orange_700"
         app:dividerPadding="10dp"
         app:dividerSize="1dp"
+        android:clipChildren="true"
         app:position="0"
         app:rippleColor="@color/green_800"
         app:selectorColor="@color/green_900">
