--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/gray"
     android:padding="10dp"
     android:orientation="vertical">
 
@@ -76,7 +76,7 @@
         android:elevation="8dp"
         app:backgroundColor="@color/white"
         app:borderColor="@color/orange_700"
-        app:borderSize="1dp"
+        app:borderWidth="2dp"
         app:dividerColor="@color/orange_700"
         app:dividerPadding="10dp"
         app:dividerSize="1dp"
@@ -132,7 +132,7 @@
     <!--app:sbg_animateSelectorDuration="1000"-->
     <!--app:sbg_backgroundColor="@color/red_700"-->
     <!--app:sbg_borderColor="@color/black"-->
-    <!--app:sbg_borderSize="1dp"-->
+    <!--app:sbg_borderWidth="1dp"-->
     <!--app:sbg_dividerColor="@color/black"-->
     <!--app:sbg_dividerPadding="10dp"-->
     <!--app:sbg_dividerRadius="10dp"-->
@@ -199,7 +199,7 @@
     <!--android:elevation="2dp"-->
     <!--app:sbg_backgroundColor="@color/white"-->
     <!--app:sbg_borderColor="@color/black"-->
-    <!--app:sbg_borderSize="1dp"-->
+    <!--app:sbg_borderWidth="1dp"-->
     <!--app:sbg_position="0"-->
     <!--app:sbg_radius="30dp"-->
     <!--app:sbg_rippleColor="@color/blue_300"-->
@@ -367,7 +367,7 @@
     <!--android:elevation="2dp"-->
     <!--app:sbg_backgroundColor="@color/white"-->
     <!--app:sbg_borderColor="@color/black"-->
-    <!--app:sbg_borderSize="1dp"-->
+    <!--app:sbg_borderWidth="1dp"-->
     <!--app:sbg_position="0"-->
     <!--app:sbg_radius="30dp"-->
     <!--app:sbg_draggable="true"-->
